--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Kicad/65C816_Unit/65C816_Unit.sch-bak
 /Kicad/65C816_Unit/fp-info-cache
 /Pico/LCDBusReader/build/
+/Kicad/65C816_Unit/LCD Bus Reader/Gerber
+/Kicad/65C816_Unit/LCD Bus Reader/fp-info-cache
