Fixed missing tracers and re-generated Gerber files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Pico/LCDBusReader/build/
 /Kicad/65C816_Unit/LCD Bus Reader/Gerber
 /Kicad/65C816_Unit/LCD Bus Reader/fp-info-cache
+/Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.kicad_pcb-bak
+/Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.sch-bak
