Moved and renamed KiCad projects.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 /Kicad/65C816_Unit/LCD Bus Reader/fp-info-cache
 /Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.kicad_pcb-bak
 /Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.sch-bak
+/Kicad/65C816 Unit/fp-info-cache
+/Kicad/LCD Bus Reader/fp-info-cache
+/Kicad/65C816 Unit/65C816_Unit.sch-bak
+/Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.kicad_pcb-bak
+/Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.sch-bak
+/Kicad/LCD Bus Reader/LCD Bus Reader.kicad_pcb-bak
+/Kicad/LCD Bus Reader/LCD Bus Reader.sch-bak
