Added symbols and footprints for various latches and flip-flops.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.sch-bak
 /Kicad/LCD Bus Reader/LCD Bus Reader.kicad_pcb-bak
 /Kicad/LCD Bus Reader/LCD Bus Reader.sch-bak
+/Kicad/65C816 Unit/65C816_Unit.kicad_pcb-bak
