Added Francesco Rigoni's Lib65816.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /Kicad/LCD Bus Reader/LCD Bus Reader.kicad_pcb-bak
 /Kicad/LCD Bus Reader/LCD Bus Reader.sch-bak
 /Kicad/65C816 Unit/65C816_Unit.kicad_pcb-bak
+/Emulator65816/.vs*
+/Emulator65816/Debug*
+/Emulator65816/Release*
