Trying to get HTML going.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /Kicad/Clock/Clock-backups/*
 /Kicad/Clock/_autosave-Clock.kicad_pcb
 /Kicad/Computer/Computer-backups/*
+*.DS_Store
+/Website/HCP65_exported/*
