Fixed SNES Timing reset.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 *.DS_Store
 /Website/HCP65_exported/*
 /Kicad/Computer/SNES Device/SNES Device-backups/*
+/Kicad/Computer/SNES Device/#auto_saved_files#
