Added 74HCT85 and 74VHC595 symbols.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /Website/HCP65_exported/*
 /Kicad/Computer/SNES Device/SNES Device-backups/*
 /Kicad/Computer/SNES Device/#auto_saved_files#
+/Kicad/*.bak
