Added Propagation Times time the wiki.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 /Kicad/Computer/SNES Device/SNES Device-backups/*
 /Kicad/Computer/SNES Device/#auto_saved_files#
 /Kicad/*.bak
+/Website/index.html_backup
