Added a Bus Tester LED circuit.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /logi65816/.idea
 *.~lock.*
 /Kicad/Computer/Keypad/Keypad/Keypad-backups
+/Kicad/Computer/Bus Tester/Bus Tester/Bus Tester-backups
