Completed clock schematic.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /Kicad/Computer/Keypad/Keypad/Keypad-backups
 /Kicad/Computer/Bus Tester/Bus Tester/Bus Tester-backups
 /Kicad/Computer/Bus Tester/Bus Tester-backups*
+/Kicad/Computer/Clock/Clock-backups
