Updated logic gates with pretty symbols.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /Kicad/Computer/Bus Tester/Bus Tester/Bus Tester-backups
 /Kicad/Computer/Bus Tester/Bus Tester-backups*
 /Kicad/Computer/Clock/Clock-backups
+/Kicad/Computer/Selector State/Selector State-backups
