Redoing Clock PCB from scratch.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /Kicad/Computer/Bus Tester/Bus Tester-backups*
 /Kicad/Computer/Clock/Clock-backups
 /Kicad/Computer/Selector State/Selector State-backups
+/Kicad/Computer/Clock/Clock-backups
