Laying out ancillary ICs.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /Kicad/Computer/Clock/Clock-backups
 /Kicad/Computer/Selector State/Selector State-backups
 /Kicad/Computer/Clock/Clock-backups
+/Kicad/Computer/Clock/#auto_saved_files#
