Laid out Clock but not ancillary PCB.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /Kicad/Computer/Selector State/Selector State-backups
 /Kicad/Computer/Clock/Clock-backups
 /Kicad/Computer/Clock/#auto_saved_files#
+/Kicad/Computer/Clock/_autosave*
