Added a right handed 7 segment LED bus tester.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 /Kicad/Computer/Clock/Clock-backups
 /Kicad/Computer/Clock/#auto_saved_files#
 /Kicad/Computer/Clock/_autosave*
+/Kicad/Computer/Bus Tester/#auto_saved_files#
