Began routing Selector.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /Kicad/Computer/Clock/#auto_saved_files#
 /Kicad/Computer/Clock/_autosave*
 /Kicad/Computer/Bus Tester/#auto_saved_files#
+/Kicad/Computer/Blank Board/Blank Board-backups
+/Kicad/Computer/Selector State/Selector State-backups
