Added MPU and Signals board.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@
 /Kicad/Computer/Bus Tester/#auto_saved_files#
 /Kicad/Computer/Blank Board/Blank Board-backups
 /Kicad/Computer/Selector State/Selector State-backups
+/Seven Segment/tmpcsim.im
+/Seven Segment/DUALHEX7SEG.abs
+/Seven Segment/DualHex7Seg.jed
+/Seven Segment/DUALHEX7SEG.pdf
+/Seven Segment/DUALHEX7SEG.pla
+/Seven Segment/DUALHEX7SEG.sim
