Re-routed LCD bus 7 segment tester and got output enables working.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /Seven Segment/DUALHEX7SEG.pdf
 /Seven Segment/DUALHEX7SEG.pla
 /Seven Segment/DUALHEX7SEG.sim
+/Kicad/Computer/MPU Signals/MPU Signals-backups
+#auto_saved_files#
