Include Clock Enable when generating Write Enable.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@
 /Seven Segment/DUALHEX7SEG.sim
 /Kicad/Computer/MPU Signals/MPU Signals-backups
 #auto_saved_files#
+/Kicad/Computer/MPU Signals/MPU Signals-backups
+/Kicad/Computer/MPU Signals/fp-info-cache
