Re-routed Selector State based on new simulation.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@
 #auto_saved_files#
 /Kicad/Computer/MPU Signals/MPU Signals-backups
 /Kicad/Computer/MPU Signals/fp-info-cache
+/Kicad/Computer/Selector State/fp-info-cache
