Added a 65C816 stress tester using a Raspberry Pi Pico.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@
 /Kicad/Computer/MPU Signals/MPU Signals-backups
 /Kicad/Computer/MPU Signals/fp-info-cache
 /Kicad/Computer/Selector State/fp-info-cache
+/Kicad/LCD Bus Reader/LCD Bus Reader-backups
+/Kicad/Pico/Pico Debugger/Pico Debugger-backups
