Moved keypad out of Computer.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@
 /Kicad/Computer/Selector State/fp-info-cache
 /Kicad/LCD Bus Reader/LCD Bus Reader-backups
 /Kicad/Pico/Pico Debugger/Pico Debugger-backups
+/Kicad/Keypad/Keypad-backups
