Cleaned up some Texas Instruments symbols.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@
 /Kicad/LCD Bus Reader/LCD Bus Reader-backups
 /Kicad/Pico/Pico Debugger/Pico Debugger-backups
 /Kicad/Keypad/Keypad-backups
+/Kicad/Computer/Address Decode/Address Decode-backups
