Fixed MPU pin connector and removed LED enable switch.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@
 /Kicad/Pico/Pico Debugger/Pico Debugger-backups
 /Kicad/Keypad/Keypad-backups
 /Kicad/Computer/Address Decode/Address Decode-backups
+/Kicad/Computer/Address Decode/#auto_saved_files#
