Moved Bus Tester out of Computer and directly into Kicad.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 /Kicad/Keypad/Keypad-backups
 /Kicad/Computer/Address Decode/Address Decode-backups
 /Kicad/Computer/Address Decode/#auto_saved_files#
+/Kicad/Bus Tester/Bus Tester-backups
