Added a Logic simulator.

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@
 /Kicad/Computer/Address Decode/Address Decode-backups
 /Kicad/Computer/Address Decode/#auto_saved_files#
 /Kicad/Bus Tester/Bus Tester-backups
+/logi65816/.idea/
+/logi65816/.idea/*
+/Logicim/.idea/*
+/Logicim/out
