Connecting circuit views circuits.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@
 /Logicim/out
 /BinReaderWriter/out/*
 /Kicad/Pico/Pico Debugger 2/Pico Debugger 2-backups/*
+/Kicad/Pico/Pico Sound/Pico Debugger 2-backups/*
+/Kicad/Pico/Pico Sound/Pico Sound-backups/*
