Set the current top level simulation.

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@
 /Kicad/Pico/Pico Debugger 2/Pico Debugger 2-backups/*
 /Kicad/Pico/Pico Sound/Pico Debugger 2-backups/*
 /Kicad/Pico/Pico Sound/Pico Sound-backups/*
+/Kicad/Pico/Pico Sound/#auto_saved_files#
