Added zoom buttons.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@
 /Kicad/Pico/Pico Sound/Pico Debugger 2-backups/*
 /Kicad/Pico/Pico Sound/Pico Sound-backups/*
 /Kicad/Pico/Pico Sound/#auto_saved_files#
+/Kicad/Pico/Pico Sound/_autosave*
