Added a 64 pin 65816 breakout board.

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@
 /Kicad/Pico/Pico Sound/Pico Sound-backups/*
 /Kicad/Pico/Pico Sound/#auto_saved_files#
 /Kicad/Pico/Pico Sound/_autosave*
+/Kicad/Computer/MPU Breakout/Blank Board-backups*
+/Kicad/Computer/MPU Breakout/MPU Breakout-backups*
