--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@
 /Kicad/Pico/Pico Sound/_autosave*
 /Kicad/Computer/MPU Breakout/Blank Board-backups*
 /Kicad/Computer/MPU Breakout/MPU Breakout-backups*
+*#auto_saved_files#
