Added an Asynchronous Write latch.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@
 /Kicad/Computer/MPU Breakout/Blank Board-backups*
 /Kicad/Computer/MPU Breakout/MPU Breakout-backups*
 *#auto_saved_files#
+/Kicad/Computer/Video 400x600 single/Blank Board-backups*
+/Kicad/Computer/Video 400x600 single/Video 400x600 single-backups*
