Second start on a video row counter.

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@
 *#auto_saved_files#
 /Kicad/Computer/Video 400x600 single/Blank Board-backups*
 /Kicad/Computer/Video 400x600 single/Video 400x600 single-backups*
+/Kicad/Computer/Video Timer/Blank Board-backups*
+/Kicad/Computer/Video Timer/Video 400x600 single-backups*
+/Kicad/Computer/Video Timer/Video Timer-backups*
+/Diagrams/Row Counter.dia~
