Use a 1-of-8 select for pixel advance rather than a shift register.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@
 /Kicad/Computer/Video Timer/Video 400x600 single-backups*
 /Kicad/Computer/Video Timer/Video Timer-backups*
 /Diagrams/Row Counter.dia~
+/Kicad/*.kicad_sch-bak
