--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@
 /Kicad/Computer/Video Timer/Video Timer-backups*
 /Diagrams/Row Counter.dia~
 /Kicad/*.kicad_sch-bak
+/Kicad/Computer/Video Timer/*kicad_sch-bak
