Desk Lamp schematic.

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@
 /Diagrams/Row Counter.dia~
 /Kicad/*.kicad_sch-bak
 /Kicad/Computer/Video Timer/*kicad_sch-bak
+/Kicad/Desk Lamp/Desk Lamp-backups*
