Realised MPU Clock Control needs thought.

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@
 /Kicad/*.kicad_sch-bak
 /Kicad/Computer/Video Timer/*kicad_sch-bak
 /Kicad/Desk Lamp/Desk Lamp-backups*
+/Kicad/Computer/VIA Device/VIA Device-backups/*
+/Kicad/Computer/VIA Device/VIA Device-backups/*
