--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@
 /Kicad/Computer/Video Timer/*kicad_sch-bak
 /Kicad/Desk Lamp/Desk Lamp-backups*
 /Kicad/Computer/VIA Device/VIA Device-backups/*
+/Kicad/Computer/Sound/Sound-backups/*
