Added Counter and Selector Component Boards.

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@
 /Kicad/Desk Lamp/Desk Lamp-backups*
 /Kicad/Computer/VIA Device/VIA Device-backups/*
 /Kicad/Computer/Sound/Sound-backups/*
+/Kicad/Computer/Component Boards/Memory 32KB with Output/Memory 32KB with Output-backups/*
+/Kicad/Computer/Component Boards/Selector 12bit/Selector 12bit-backups/*
