Trying to add a 24bit counter.

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,8 @@
 /Kicad/Computer/Sound/Sound-backups/*
 /Kicad/Computer/Component Boards/Memory 32KB with Output/Memory 32KB with Output-backups/*
 /Kicad/Computer/Component Boards/Selector 12bit/Selector 12bit-backups/*
+/Kicad/Computer/Component Boards/Counter 16bit with IO/Counter 16bit with IO-backups/*
+/Kicad/Computer/Component Boards/Counter 16bit/Counter 16bit-backups/*
+/Kicad/Computer/Component Boards/Counter 24bit with IO/Counter 16bit with IO-backups/*
+/Kicad/Computer/Component Boards/Counter 24bit with IO/Counter 16bit-backups/*
+/Kicad/Computer/Component Boards/Counter 24bit with IO/Counter 24bit with IO-backups/*
