Finished routing all Counter 16bit with IO signals.

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@
 /Kicad/Computer/Component Boards/Counter 24bit with IO/Counter 16bit with IO-backups/*
 /Kicad/Computer/Component Boards/Counter 24bit with IO/Counter 16bit-backups/*
 /Kicad/Computer/Component Boards/Counter 24bit with IO/Counter 24bit with IO-backups/*
+/Kicad/Computer/Component Boards/Counter 16bit with IO/Counter 16bit-backups/*
