--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@
 /Kicad/Computer/Component Boards/Counter 24bit with IO/Counter 24bit with IO-backups/*
 /Kicad/Computer/Component Boards/Counter 16bit with IO/Counter 16bit-backups/*
 /Kicad/Computer/Component Boards/Comparator 16bit/Comparator 16bit-backups/*
+/Kicad/Computer/Component Boards/Flags Enable Interrupt/Flags Enable Interrupt-backups/*
