Adding version two of the sound card using component boards.

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,5 @@
 /Kicad/Computer/Component Boards/Counter 16bit with IO/Counter 16bit-backups/*
 /Kicad/Computer/Component Boards/Comparator 16bit/Comparator 16bit-backups/*
 /Kicad/Computer/Component Boards/Flags Enable Interrupt/Flags Enable Interrupt-backups/*
+/Kicad/Computer/Sound V2/Sound-backups/*
+/Kicad/Computer/Sound V2/Sound V2-backups/*
