Added some component boards and symbols and footprints.

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@
 /Kicad/Computer/Component Boards/Flags Enable Interrupt/Flags Enable Interrupt-backups/*
 /Kicad/Computer/Sound V2/Sound-backups/*
 /Kicad/Computer/Sound V2/Sound V2-backups/*
+/Kicad/Computer/Component Boards/Audio DAC/Audio DAC-backups/*
+/Kicad/Computer/Component Boards/Audio DAC/Counter 16bit-backups/*
