Moved the old Sound board into a Sound V1 project.

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@
 /Kicad/Computer/Sound V2/Sound V2-backups/*
 /Kicad/Computer/Component Boards/Audio DAC/Audio DAC-backups/*
 /Kicad/Computer/Component Boards/Audio DAC/Counter 16bit-backups/*
+/Kicad/Computer/Sound V1/Sound-backups/*
+/Kicad/Computer/Sound V1/Sound V1-backups/*
