Moved the Sound Schematic into it's own directory.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,5 @@
 /Kicad/Computer/Component Boards/Audio DAC/Counter 16bit-backups/*
 /Kicad/Computer/Sound V1/Sound-backups/*
 /Kicad/Computer/Sound V1/Sound V1-backups/*
+/Kicad/Computer/Sound/Sound Board/Sound V2-backups/*
+/Kicad/Computer/Sound/Sound Board/Sound-backups/*
