Added some component boards and symbols and footprints.

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,6 @@
 /Kicad/Computer/Sound V1/Sound V1-backups/*
 /Kicad/Computer/Sound/Sound Board/Sound V2-backups/*
 /Kicad/Computer/Sound/Sound Board/Sound-backups/*
+/Kicad/Computer/Component Boards/Signal Buffer/Signal Buffer-backups/*
+/Kicad/Computer/Sound/Sound Board/Sound Board-backups/*
+/Kicad/Computer/Sound/Sound Device Select/Sound Device Select-backups/*
