Added some component boards and symbols and footprints.

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@
 /Kicad/Computer/Component Boards/Signal Buffer/Signal Buffer-backups/*
 /Kicad/Computer/Sound/Sound Board/Sound Board-backups/*
 /Kicad/Computer/Sound/Sound Device Select/Sound Device Select-backups/*
+/Kicad/Computer/Sound/Sound Address Decode/Sound Address Decode-backups/*
+/Kicad/Computer/Sound/Sound Clock/Sound Clock-backups/*
