Shortening SixteenHigh parsing.

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@
 /Kicad/Computer/Old/Selector State/Selector State-backups/*
 /Kicad/Computer/Old/SNES Device/SNES Device-backups/*
 /Kicad/Computer/Async FIFO Write/Async FIFO Write-backups/*
+/Kicad/Computer/Graphics/Pixel Doubler/Pixel Doubler-backups/*
+/Kicad/Computer/Graphics/Pixel Doubler/Sound Clock-backups/*
