Added a generic device address decode schematic.

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@
 /Kicad/Computer/Async FIFO Write/Async FIFO Write-backups/*
 /Kicad/Computer/Graphics/Pixel Doubler/Pixel Doubler-backups/*
 /Kicad/Computer/Graphics/Pixel Doubler/Sound Clock-backups/*
+/Kicad/Computer/Component Boards/Device Address Decode/Counter 16bit with IO-backups/*
+/Kicad/Computer/Component Boards/Device Address Decode/Device Address Decode-backups/*
