Routed Device Decode Stage A.

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,4 @@
 /Kicad/Computer/Graphics/Pixel Doubler/Sound Clock-backups/*
 /Kicad/Computer/Component Boards/Device Address Decode/Counter 16bit with IO-backups/*
 /Kicad/Computer/Component Boards/Device Address Decode/Device Address Decode-backups/*
+/Kicad/Computer/Component Boards/Big Board/Big Board-backups/*
