--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,5 @@
 /Kicad/Computer/Component Boards/Device Address Decode/Counter 16bit with IO-backups/*
 /Kicad/Computer/Component Boards/Device Address Decode/Device Address Decode-backups/*
 /Kicad/Computer/Component Boards/Big Board/Big Board-backups/*
+/Kicad/Computer/Component Boards/Device Decode stage A/Device Decode stage A-backups/*
+/Kicad/Computer/Component Boards/Device Decode stage B/Device Decode stage B-backups/*
