Added a Clock Hold Select.

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@
 /Kicad/Computer/Component Boards/Big Board/Big Board-backups/*
 /Kicad/Computer/Component Boards/Device Decode stage A/Device Decode stage A-backups/*
 /Kicad/Computer/Component Boards/Device Decode stage B/Device Decode stage B-backups/*
+/Kicad/Computer/Component Boards/Clock Hold Select/Clock Hold Select-backups/*
