Updated the Signal Buffer to be a Data and Signal Buffer.

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@
 /Kicad/Computer/Component Boards/Device Decode stage A/Device Decode stage A-backups/*
 /Kicad/Computer/Component Boards/Device Decode stage B/Device Decode stage B-backups/*
 /Kicad/Computer/Component Boards/Clock Hold Select/Clock Hold Select-backups/*
+/Kicad/Computer/Component Boards/Data and Signal Buffer/Signal Buffer-backups/*
+/Kicad/Computer/Component Boards/Data and Signal Buffer/Data and Signal Buffer-backups/*
