--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,6 @@
 /Kicad/Computer/Component Boards/Clock Hold Select/Clock Hold Select-backups/*
 /Kicad/Computer/Component Boards/Data and Signal Buffer/Signal Buffer-backups/*
 /Kicad/Computer/Component Boards/Data and Signal Buffer/Data and Signal Buffer-backups/*
+/Kicad/Computer/Component Boards/Address Buffer/Address Buffer-backups/*
+/Kicad/Computer/Component Boards/Address Buffer/Signal Buffer-backups/*
+/Kicad/Computer/Component Boards/Address Buffer/Data and Signal Buffer-backups/*
