Added a Device Buffer.

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@
 /Kicad/Computer/Component Boards/Address Buffer/Address Buffer-backups/*
 /Kicad/Computer/Component Boards/Address Buffer/Signal Buffer-backups/*
 /Kicad/Computer/Component Boards/Address Buffer/Data and Signal Buffer-backups/*
+/Kicad/Computer/Component Boards/Device Buffer/Device Buffer-backups/*
