Splitting LCD Schematics into separate projects.

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@
 /Kicad/Computer/Component Boards/Device Buffer/Device Buffer-backups/*
 /Kicad/Computer/VIA/Via Clock Control/Via Clock Control-backups/*
 /Kicad/Computer/VIA/VIA Breakout/VIA Breakout-backups/*
+/Kicad/Computer/Old/VIA Device/VIA Device-backups/*
+/Kicad/Computer/LCD Display/LCD Display-backups/*
