Added a VIA Board.

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@
 /Kicad/Computer/VIA/VIA Breakout/VIA Breakout-backups/*
 /Kicad/Computer/Old/VIA Device/VIA Device-backups/*
 /Kicad/Computer/LCD Display/LCD Display-backups/*
+/Kicad/Computer/VIA/VIA Board/VIA Board-backups/*
