Resized VIA and Sound Boards.

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@
 /Kicad/Computer/Old/VIA Device/VIA Device-backups/*
 /Kicad/Computer/LCD Display/LCD Display-backups/*
 /Kicad/Computer/VIA/VIA Board/VIA Board-backups/*
+/Kicad/Computer/Component Boards/Device Decode Simple/Device Decode Simple-backups/*
