Added a Dual 8 bit comparator.

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@
 /Kicad/Computer/LCD Display/LCD Display-backups/*
 /Kicad/Computer/VIA/VIA Board/VIA Board-backups/*
 /Kicad/Computer/Component Boards/Device Decode Simple/Device Decode Simple-backups/*
+/Kicad/Computer/Component Boards/Dual Comparator 8bit/Dual Comparator 8bit-backups/*
