--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,4 @@
 /Kicad/Computer/Component Boards/Device Decode Simple/Device Decode Simple-backups/*
 /Kicad/Computer/Component Boards/Dual Comparator 8bit/Dual Comparator 8bit-backups/*
 /Kicad/Computer/Graphics/Video Counter 12bit/Video Counter 12bit-backups/*
+/Kicad/Computer/Graphics/Address Selector 24bit/Address Selector 24bit-backups/*
