Added PS2 timing and FIFO boards.

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@
 /Kicad/Computer/Component Boards/Dual Comparator 8bit/Dual Comparator 8bit-backups/*
 /Kicad/Computer/Graphics/Video Counter 12bit/Video Counter 12bit-backups/*
 /Kicad/Computer/Graphics/Address Selector 24bit/Address Selector 24bit-backups/*
+/Kicad/Computer/PS2/PS2 Timing/PS2 Timing-backups/*
+/Kicad/Computer/PS2/PS2 FIFO/PS2 FIFO-backups/*
