Added State Reader and re-routed Device Decode stage B.

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@
 /Kicad/Computer/PS2/PS2 FIFO/PS2 FIFO-backups/*
 /Kicad/Computer/Component Boards/GPIO 4bit/GPIO 4bit-backups/*
 /Kicad/Computer/PS2/PS2 Board/PS2 Board-backups/*
+/Kicad/Computer/Component Boards/State Reader/State Reader-backups/*
