Added a standard clock hold without selectors.

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@
 /Kicad/Computer/Component Boards/GPIO 4bit/GPIO 4bit-backups/*
 /Kicad/Computer/PS2/PS2 Board/PS2 Board-backups/*
 /Kicad/Computer/Component Boards/State Reader/State Reader-backups/*
+/Kicad/Computer/Component Boards/Clock Hold Standard/Clock Hold Standard-backups/*
