Added a standard VIA clock.

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@
 /Kicad/Computer/PS2/PS2 Board/PS2 Board-backups/*
 /Kicad/Computer/Component Boards/State Reader/State Reader-backups/*
 /Kicad/Computer/Component Boards/Clock Hold Standard/Clock Hold Standard-backups/*
+/Kicad/Computer/VIA/VIA Standard Clock/VIA Standard Clock-backups/*
