Added W65C816 breakout and clock hold boards.

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@
 /Kicad/Computer/MPU/W65C816 Breakout/W65C816 Breakout-backups/*
 /Kicad/Computer/MPU/W65C816 Clock Hold/W65C816 Clock Hold-backups/*
 /Kicad/Computer/Old/MPU Breakout/MPU Breakout-backups/MPU Breakout-2023-10-22_210129.zip
+/Kicad/Computer/MPU/HCP65 Single MPU Board/HCP65 Single MPU Board-backups/*
+/Kicad/Computer/Standard PCB/Standard PCB-backups/*
