Added a Kernal mode board.

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,5 @@
 /Kicad/Computer/Standard PCB/Standard PCB-backups/*
 /Kicad/Computer/MPU/HCP65 MPU Address Decode/HCP65 MPU Address Decode-backups/*
 /Kicad/Computer/MPU/HCP65 MPU Memory/HCP65 MPU Memory-backups/*
+/Kicad/Computer/MPU/HCP65 Kernal Mode/HCP65 Kernal Mode-backups/*
+/Kicad/Computer/MPU/HCP65 Kernal Mode/HCP65 MPU Address Decode-backups/*
