Added device reset and interrupt boards.

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,5 @@
 /Kicad/Computer/MPU/HCP65 MPU Memory/HCP65 MPU Memory-backups/*
 /Kicad/Computer/MPU/HCP65 Kernal Mode/HCP65 Kernal Mode-backups/*
 /Kicad/Computer/MPU/HCP65 Kernal Mode/HCP65 MPU Address Decode-backups/*
+/Kicad/Computer/MPU/HCP65 Device Interrupts/HCP65 Device Interrupts-backups/*
+/Kicad/Computer/MPU/HCP65 Device Reset/HCP65 Device Reset-backups/*
