--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@
 /Kicad/Computer/MPU/HCP65 Kernal Mode/HCP65 MPU Address Decode-backups/*
 /Kicad/Computer/MPU/HCP65 Device Interrupts/HCP65 Device Interrupts-backups/*
 /Kicad/Computer/MPU/HCP65 Device Reset/HCP65 Device Reset-backups/*
+/Kicad/Computer/MPU/HCP65 Main Memory Address/HCP65 Main Memory Address-backups/*
+/Kicad/Computer/MPU/HCP65 Main Memory Data/HCP65 Main Memory Data-backups/*
+/Kicad/Computer/MPU/HCP65 MPU NMI/HCP65 MPU NMI-backups/*
