Added a RS232 UART board.

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,4 @@
 /Kicad/Computer/MPU/HCP65 Main Memory Address/HCP65 Main Memory Address-backups/*
 /Kicad/Computer/MPU/HCP65 Main Memory Data/HCP65 Main Memory Data-backups/*
 /Kicad/Computer/MPU/HCP65 MPU NMI/HCP65 MPU NMI-backups/*
+/Kicad/Computer/UART/RS232/RS232-backups/*
