Started adding a Clock Clock Generator.

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@
 /Kicad/Computer/MPU/HCP65 Main Memory Data/HCP65 Main Memory Data-backups/*
 /Kicad/Computer/MPU/HCP65 MPU NMI/HCP65 MPU NMI-backups/*
 /Kicad/Computer/UART/RS232/RS232-backups/*
+/Kicad/Computer/Main/Clock Generator/Clock Generator-backups/*
+/Kicad/Computer/Main/Clock LTC6903/Clock LTC6903-backups/*
+/Kicad/Computer/Main/Clock Oscillator/Clock Oscillator-backups/*
+/Kicad/Computer/Main/Clock Push Button/Clock Push Button-backups/*
