Split NMI state and timer into separate boards.

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,5 @@
 /Kicad/Computer/Main/Clock LTC6903/Clock LTC6903-backups/*
 /Kicad/Computer/Main/Clock Oscillator/Clock Oscillator-backups/*
 /Kicad/Computer/Main/Clock Push Button/Clock Push Button-backups/*
+/Kicad/Computer/MPU/HCP65 MPU Timer/HCP65 MPU NMI-backups/*
+/Kicad/Computer/MPU/HCP65 MPU Timer/HCP65 MPU Timer-backups/*
