Split Kernal Mode into the kernal counter and instruction code.

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@
 /Kicad/Computer/MPU/HCP65 MPU Timer/HCP65 MPU NMI-backups/*
 /Kicad/Computer/MPU/HCP65 MPU Timer/HCP65 MPU Timer-backups/*
 /Kicad/Computer/MPU/HCP65 Test MPU Board/HCP65 Test MPU Board-backups/*
+/Kicad/Computer/Main/Dual MPU Clock Generator/Dual MPU Clock Generator-backups/*
+/Kicad/Computer/MPU/HCP65 Instruction Code/HCP65 Instruction Code-backups/*
+/Kicad/Computer/Main/Quad MPU Clock Generator/Quad MPU Clock Generator-backups/*
