Added an LCD Device Board.

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,6 @@
 /Kicad/Computer/Main/Dual MPU Clock Generator/Dual MPU Clock Generator-backups/*
 /Kicad/Computer/MPU/HCP65 Instruction Code/HCP65 Instruction Code-backups/*
 /Kicad/Computer/Main/Quad MPU Clock Generator/Quad MPU Clock Generator-backups/*
+/Kicad/Computer/LCD/LCD Board/LCD Board-backups/*
+/Kicad/Computer/LCD/LCD Board/VIA Board-backups/*
+/Kicad/Computer/LCD/LCD Display/LCD Display-backups/*
