Added a SNES Gamepad Clock.

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,4 @@
 /Kicad/Computer/LCD/LCD Board/LCD Board-backups/*
 /Kicad/Computer/LCD/LCD Board/VIA Board-backups/*
 /Kicad/Computer/LCD/LCD Display/LCD Display-backups/*
+/Kicad/Computer/SNES/SNES Clock/SNES Clock-backups/*
