Added a SNES Controller Reader.

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,6 @@
 /Kicad/Computer/LCD/LCD Board/VIA Board-backups/*
 /Kicad/Computer/LCD/LCD Display/LCD Display-backups/*
 /Kicad/Computer/SNES/SNES Clock/SNES Clock-backups/*
+/Kicad/Computer/SNES/SNES Controller Clock/SNES Controller Clock-backups/*
+/Kicad/Computer/SNES/SNES Controller Reader/SNES Clock-backups/*
+/Kicad/Computer/SNES/SNES Controller Reader/SNES Controller Reader-backups/*
