Silkscreened both Address Decode and Address Decode Wide Boards.

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,4 @@
 /Kicad/Computer/SNES/SNES Controller Clock/SNES Controller Clock-backups/*
 /Kicad/Computer/SNES/SNES Controller Reader/SNES Clock-backups/*
 /Kicad/Computer/SNES/SNES Controller Reader/SNES Controller Reader-backups/*
+/Kicad/Computer/MPU/HCP65 MPU Address Decode Wide/HCP65 MPU Address Decode Wide-backups/*
