Added a 3 MPU clock generator.

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@
 /Kicad/Computer/SNES/SNES Controller Reader/SNES Clock-backups/*
 /Kicad/Computer/SNES/SNES Controller Reader/SNES Controller Reader-backups/*
 /Kicad/Computer/MPU/HCP65 MPU Address Decode Wide/HCP65 MPU Address Decode Wide-backups/*
+/Kicad/Computer/Main/Triple MPU Clock Generator/Triple MPU Clock Generator-backups/*
