Split Device Interrupts into Wide and normal variants.

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@
 /Kicad/Computer/SNES/SNES Controller Reader/SNES Controller Reader-backups/*
 /Kicad/Computer/MPU/HCP65 MPU Address Decode Wide/HCP65 MPU Address Decode Wide-backups/*
 /Kicad/Computer/Main/Triple MPU Clock Generator/Triple MPU Clock Generator-backups/*
+/Kicad/Computer/MPU/HCP65 Device Interrupts Wide/HCP65 Device Interrupts Wide-backups/*
