Added a Video Blank and Sync Board.

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,4 @@
 /Kicad/Computer/MPU/HCP65 MPU Address Decode Wide/HCP65 MPU Address Decode Wide-backups/*
 /Kicad/Computer/Main/Triple MPU Clock Generator/Triple MPU Clock Generator-backups/*
 /Kicad/Computer/MPU/HCP65 Device Interrupts Wide/HCP65 Device Interrupts Wide-backups/*
+/Kicad/Computer/Graphics/Blank and Sync/Blank and Sync-backups/*
