Renamed Graphics directory to Video.

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,7 @@
 /Kicad/Computer/Main/Triple MPU Clock Generator/Triple MPU Clock Generator-backups/*
 /Kicad/Computer/MPU/HCP65 Device Interrupts Wide/HCP65 Device Interrupts Wide-backups/*
 /Kicad/Computer/Graphics/Blank and Sync/Blank and Sync-backups/*
+/Kicad/Computer/Video/Address Selector 24bit/Address Selector 24bit-backups/*
+/Kicad/Computer/Video/Blank and Sync/Blank and Sync-backups/*
+/Kicad/Computer/Video/Pixel Doubler/Pixel Doubler-backups/*
+/Kicad/Computer/Video/Video Counter 12bit/Video Counter 12bit-backups/*
