Added Video Address Reader schematic and PCB.

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@
 /Kicad/Computer/Video/Video Address Counter/Video Address Counter-backups/*
 /Kicad/Computer/Video/Video Address Selector/Video Address Selector-backups/*
 /Kicad/Computer/Video/Video Board/Video Board-backups/*
+/Kicad/Computer/Video/Video Address Reader/Video Address Reader-backups/*
