Added left and right signal testers.

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,5 @@
 /Kicad/Computer/Video/Video Address Selector/Video Address Selector-backups/*
 /Kicad/Computer/Video/Video Board/Video Board-backups/*
 /Kicad/Computer/Video/Video Address Reader/Video Address Reader-backups/*
+/Kicad/Tester/Signal Tester Left/Signal Tester Left-backups/*
+/Kicad/Tester/Signal Tester Right/Signal Tester Right-backups/*
