--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,4 @@
 /Kicad/Computer/Video/Video Address Reader/Video Address Reader-backups/*
 /Kicad/Tester/Signal Tester Left/Signal Tester Left-backups/*
 /Kicad/Tester/Signal Tester Right/Signal Tester Right-backups/*
+/Kicad/Tester/Bus Tester/Bus Tester-backups/*
