--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,4 @@
 /Kicad/Tester/Signal Tester Left/Signal Tester Left-backups/*
 /Kicad/Tester/Signal Tester Right/Signal Tester Right-backups/*
 /Kicad/Tester/Bus Tester/Bus Tester-backups/*
+/Kicad/Computer/Component Boards/GPIO 16bit/GPIO 16bit-backups/*
