Added a Wide Pico GPIO board.

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,4 @@
 /Kicad/Tester/Signal Tester Right/Signal Tester Right-backups/*
 /Kicad/Tester/Bus Tester/Bus Tester-backups/*
 /Kicad/Computer/Component Boards/GPIO 16bit/GPIO 16bit-backups/*
+/Kicad/Pico/Pico Wide GPIO/Pico Wide GPIO-backups/*
