Added a 16bit Address Buffer.

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,5 @@
 /Kicad/Tester/Bus Tester/Bus Tester-backups/*
 /Kicad/Computer/Component Boards/GPIO 16bit/GPIO 16bit-backups/*
 /Kicad/Pico/Pico Wide GPIO/Pico Wide GPIO-backups/*
+/Kicad/Computer/Component Boards/Address Buffer 16bit/Address Buffer 16bit-backups/*
+/Kicad/Computer/Component Boards/Address Buffer 24bit/Address Buffer 24bit-backups/*
