--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,6 @@
 /Kicad/Pico/Pico Wide GPIO/Pico Wide GPIO-backups/*
 /Kicad/Computer/Component Boards/Address Buffer 16bit/Address Buffer 16bit-backups/*
 /Kicad/Computer/Component Boards/Address Buffer 24bit/Address Buffer 24bit-backups/*
+/Kicad/Computer/Main/Processor Board/Processor Board-backups/*
+/Kicad/Computer/Main/Mainboard Small/Mainboard Small-backups/*
+/Kicad/Computer/Main/Default Board/Default Board-backups/*
