Added Main Memory Select and W65C816 Debug Display.

--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,5 @@
 /Kicad/Computer/Main/Processor Board/Processor Board-backups/*
 /Kicad/Computer/Main/Mainboard Small/Mainboard Small-backups/*
 /Kicad/Computer/Main/Default Board/Default Board-backups/*
+/Kicad/Computer/Main/Main Memory Select/Main Memory Select-backups/*
+/Kicad/Computer/MPU/W65C816 Debug Display/W65C816 Debug Display-backups/*
