--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,4 @@
 /Kicad/Computer/Main/Default Board/Default Board-backups/*
 /Kicad/Computer/Main/Main Memory Select/Main Memory Select-backups/*
 /Kicad/Computer/MPU/W65C816 Debug Display/W65C816 Debug Display-backups/*
+/Kicad/Computer/Main/Processor Board/~Processor Board.kicad_sch.lck
